# image-writer

./: .gitignore  CMakeLists.txt  README.md  config.h  config.status  libtool
conf/: atalkd.conf
doc/man/man4/: atalk.4
etc/afpd/.deps/: afpd-acls.Po  afpd-afp_asp.Po  afpd-afp_config.Po  afpd-afp_dsi.Po  afpd-afp_options.Po  afpd-afp_util.Po  afpd-afp_zeroconf.Po  afpd-afprun.Po  afpd-appl.Po  afpd-auth.Po  afpd-catsearch.Po  afpd-desktop.Po  afpd-dircache.Po  afpd-directory.Po  afpd-enumerate.Po  afpd-extattrs.Po  afpd-fce_api.Po  afpd-fce_util.Po  afpd-file.Po  afpd-filedir.Po  afpd-fork.Po  afpd-gettok.Po  afpd-hash.Po  afpd-main.Po  afpd-mangle.Po  afpd-messages.Po  afpd-nfsquota.Po  afpd-ofork.Po  afpd-quota.Po  afpd-status.Po  afpd-switch.Po  afpd-uam.Po  afpd-unix.Po  afpd-volume.Po  fce-fce_api.Po  fce-fce_util.Po  hash-hash.Po
etc/atalkd/.deps/: aep.Po  multicast.Po
etc/cnid_dbd/.deps/: cmd_dbd.Po  cmd_dbd_scanvol.Po  cnid_metad.Po  comm.Po  db_param.Po  dbd_add.Po  dbd_dbcheck.Po  dbd_delete.Po  dbd_get.Po  dbd_getstamp.Po  dbd_lookup.Po  dbd_rebuild_add.Po  dbd_resolve.Po  dbd_search.Po  dbd_update.Po  dbif.Po  main.Po  pack.Po  usockfd.Po
etc/papd/.deps/: auth.Po  comment.Po  file.Po  headers.Po  lp.Po  magics.Po  main.Po  ppd.Po  print_cups.Po  printcap.Po  queries.Po  session.Po  showppd-ppd.Po  showppd-showppd.Po  uam.Po
etc/psf/.deps/: psa.Po  psf.Po
etc/uams/.deps/: uams_guest.Plo  uams_passwd.Plo
goodies/: ImageWriter.ppd
goodies/cups-backend/: pap
include/atalk/: acl.h  adouble.h  aep.h  asp.h  atp.h  ddp.h  globals.h  nbp.h  netddp.h  pap.h  rtmp.h  util.h  zip.h
include/netatalk/: aarp.c  aarp.h  at.h
include/solaris/: aarp.c
libatalk/acl/: cache.c  unix.c
libatalk/acl/.deps/: cache.Plo  unix.Plo  uuid.Plo
libatalk/adouble/: ad_open.c
libatalk/adouble/.deps/: ad_attr.Plo  ad_date.Plo  ad_flush.Plo  ad_lock.Plo  ad_open.Plo  ad_read.Plo  ad_sendfile.Plo  ad_size.Plo  ad_write.Plo
libatalk/asp/: asp_getsess.c
libatalk/asp/.deps/: asp_attn.Plo  asp_close.Plo  asp_cmdreply.Plo  asp_getreq.Plo  asp_getsess.Plo  asp_init.Plo  asp_shutdown.Plo  asp_tickle.Plo  asp_write.Plo
libatalk/atp/: atp_open.c  atp_sresp.c
libatalk/atp/.deps/: atp_bufs.Plo  atp_close.Plo  atp_open.Plo  atp_packet.Plo  atp_rreq.Plo  atp_rresp.Plo  atp_rsel.Plo  atp_sreq.Plo  atp_sresp.Plo
libatalk/bstring/.deps/: bstradd.Plo  bstrlib.Plo
libatalk/cnid/.deps/: cnid.Plo  cnid_init.Plo
libatalk/cnid/cdb/: cnid_cdb_open.c
libatalk/cnid/dbd/.deps/: cnid_dbd.Plo
libatalk/cnid/last/: cnid_last.c
libatalk/cnid/last/.deps/: cnid_last.Plo
libatalk/cnid/tdb/.deps/: cnid_tdb_add.Plo  cnid_tdb_close.Plo  cnid_tdb_delete.Plo  cnid_tdb_get.Plo  cnid_tdb_lookup.Plo  cnid_tdb_open.Plo  cnid_tdb_resolve.Plo  cnid_tdb_update.Plo
libatalk/compat/: snprintf.c
libatalk/compat/.deps/: inet_aton.Plo  rquota_xdr.Plo  strdup.Plo
libatalk/dsi/: dsi_tcp.c  dsi_write.c
libatalk/dsi/.deps/: dsi_attn.Plo  dsi_close.Plo  dsi_cmdreply.Plo  dsi_getsess.Plo  dsi_getstat.Plo  dsi_init.Plo  dsi_opensess.Plo  dsi_read.Plo  dsi_stream.Plo  dsi_tcp.Plo  dsi_tickle.Plo  dsi_write.Plo
libatalk/nbp/: nbp_lkup.c  nbp_rgstr.c  nbp_unrgstr.c
libatalk/nbp/.deps/: nbp_lkup.Plo  nbp_rgstr.Plo  nbp_unrgstr.Plo  nbp_util.Plo
libatalk/netddp/: netddp_open.c  netddp_recvfrom.c  netddp_sendto.c
libatalk/netddp/.deps/: netddp_open.Plo  netddp_recvfrom.Plo  netddp_sendto.Plo
libatalk/tdb/.deps/: spinlock.Plo  tdb.Plo
libatalk/unicode/: iconv.c  utf8.c
libatalk/unicode/.deps/: charcnv.Plo  iconv.Plo  utf16_case.Plo  utf8.Plo  util_unistr.Plo
libatalk/unicode/charsets/: generic_mb.c  mac_hebrew.c
libatalk/unicode/charsets/.deps/: generic_cjk.Plo  generic_mb.Plo  mac_centraleurope.Plo  mac_chinese_simp.Plo  mac_chinese_trad.Plo  mac_cyrillic.Plo  mac_greek.Plo  mac_hebrew.Plo  mac_japanese.Plo  mac_korean.Plo  mac_roman.Plo  mac_turkish.Plo
libatalk/util/: atalk_addr.c  fault.c  getiface.c  logger.c  server_child.c  socket.c
libatalk/util/.deps/: atalk_addr.Plo  cnid.Plo  fault.Plo  ftw.Plo  getiface.Plo  locking.Plo  logger.Plo  module.Plo  queue.Plo  server_child.Plo  server_ipc.Plo  server_lock.Plo  socket.Plo  strdicasecmp.Plo  strlcpy.Plo  unix.Plo  volinfo.Plo
libatalk/vfs/: ea_sys.c  vfs.c
libatalk/vfs/.deps/: acl.Plo  ea.Plo  ea_sys.Plo  sys_ea.Plo  unix.Plo  vfs.Plo
toto/usr/local/etc/netatalk/: AppleVolumes.default  afpd.conf
toto/usr/local/sbin/: afpd  cnid_dbd  cnid_metad
toto/usr/local/share/man/man1/: afpldaptest.1
toto/usr/local/share/man/man5/: AppleVolumes.default.5  afp_ldap.conf.5  afp_signature.conf.5  afp_voluuid.conf.5  afpd.conf.5  netatalk.conf.5
toto/usr/local/share/man/man8/: afpd.8  cnid_metad.8
